poc/tests/errors/test_FplMisspelledConstructor_first_occurrence.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            Nat1(x: Int)
            {
                cases
                (
                    case IsGreaterOrEqual(x.RightMember(), x.LeftMember()):
                        self:=x.RightMember()
                    else:
                        self:=undefined
                )
            }
        }
    }
}

##############################

FplMisspelledConstructor:7:16: Misspelled constructor Nat1 (must be named Nat)